--- a/CustomNavigationTransition/Base.lproj/Main.storyboard
+++ b/CustomNavigationTransition/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Fisrt-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController title="Fisrt" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -39,16 +39,16 @@
                             <constraint firstItem="7IE-Z2-iSr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mMF-nK-qP7"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="FOn-fS-kZb"/>
+                    <navigationItem key="navigationItem" title="First" id="FOn-fS-kZb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1055.2" y="122.78860569715144"/>
         </scene>
-        <!--View Controller-->
+        <!--Second-->
         <scene sceneID="frk-ha-Xct">
             <objects>
-                <viewController id="Uxr-at-7ar" sceneMemberID="viewController">
+                <viewController title="Second" id="Uxr-at-7ar" customClass="SecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YEX-as-5PC"/>
                         <viewControllerLayoutGuide type="bottom" id="58l-Ck-gDb"/>
@@ -56,7 +56,24 @@
                     <view key="view" contentMode="scaleToFill" id="k3n-Zg-SZn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMC-a3-7et">
+                                <rect key="frame" x="162.5" y="318.5" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="35o-ml-AoH"/>
+                                    <constraint firstAttribute="height" constant="30" id="veI-KK-L5m"/>
+                                </constraints>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="backAction:" destination="Uxr-at-7ar" eventType="touchUpInside" id="TvM-9I-hXV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aMC-a3-7et" firstAttribute="centerY" secondItem="k3n-Zg-SZn" secondAttribute="centerY" id="Rsz-Ds-YMJ"/>
+                            <constraint firstItem="aMC-a3-7et" firstAttribute="centerX" secondItem="k3n-Zg-SZn" secondAttribute="centerX" id="zxu-xY-qnv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Op2-AW-kTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
