Present image transition

--- a/CustomNavigationTransition/Base.lproj/Main.storyboard
+++ b/CustomNavigationTransition/Base.lproj/Main.storyboard
@@ -118,6 +118,38 @@
             </objects>
             <point key="canvasLocation" x="2670" y="123"/>
         </scene>
+        <!--Image View Controller-->
+        <scene sceneID="LeN-V5-0W2">
+            <objects>
+                <viewController storyboardIdentifier="ImageViewController" id="Vlm-Ct-gST" customClass="ImageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Vs-yc-edX"/>
+                        <viewControllerLayoutGuide type="bottom" id="l7c-Vr-02Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QAt-WZ-mFo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ahg-df-a5A">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95301371810000002" green="0.88812934030000001" blue="0.68686825039999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ahg-df-a5A" secondAttribute="trailing" id="4dQ-5P-5yv"/>
+                            <constraint firstItem="ahg-df-a5A" firstAttribute="top" secondItem="5Vs-yc-edX" secondAttribute="bottom" id="DPJ-jn-roA"/>
+                            <constraint firstItem="ahg-df-a5A" firstAttribute="leading" secondItem="QAt-WZ-mFo" secondAttribute="leading" id="fOk-T7-TeZ"/>
+                            <constraint firstItem="l7c-Vr-02Q" firstAttribute="top" secondItem="ahg-df-a5A" secondAttribute="bottom" id="g8R-wq-Web"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="ahg-df-a5A" id="Zr2-IM-akp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NeE-cC-bey" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2343" y="1011"/>
+        </scene>
         <!--Custom Transition Navigation Controller-->
         <scene sceneID="9Rj-jA-V4U">
             <objects>
