--- a/CustomNavigationTransition/Base.lproj/Main.storyboard
+++ b/CustomNavigationTransition/Base.lproj/Main.storyboard
@@ -39,17 +39,31 @@
                                     <constraint firstAttribute="height" constant="90" id="YH7-Qe-wdk"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5j-8D-Hm0">
+                                <rect key="frame" x="245" y="537" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="SEq-ka-5Xh"/>
+                                    <constraint firstAttribute="width" constant="100" id="x6F-AW-Naa"/>
+                                </constraints>
+                                <state key="normal" image="test"/>
+                                <connections>
+                                    <action selector="circlePresentAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="afS-OS-LO4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="P5j-8D-Hm0" secondAttribute="trailing" constant="30" id="9hL-W1-gwV"/>
                             <constraint firstItem="7IE-Z2-iSr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Afv-eM-ZwP"/>
                             <constraint firstItem="l56-ke-KSh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="WG9-YQ-qv0"/>
                             <constraint firstItem="7IE-Z2-iSr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mMF-nK-qP7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="P5j-8D-Hm0" secondAttribute="bottom" constant="30" id="unI-rq-Om8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="l56-ke-KSh" secondAttribute="bottom" constant="10" id="wJl-wr-WV1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="First" id="FOn-fS-kZb"/>
                     <connections>
+                        <outlet property="circleButton" destination="P5j-8D-Hm0" id="Ciu-Tl-bMS"/>
                         <outlet property="imageView" destination="l56-ke-KSh" id="wZx-VZ-jLm"/>
                     </connections>
                 </viewController>
@@ -185,6 +199,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YHc-SS-nnM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1055" y="825"/>
+        </scene>
+        <!--Circle Presented View Controller-->
+        <scene sceneID="JVl-I4-kCh">
+            <objects>
+                <viewController storyboardIdentifier="CirclePresentedViewController" id="wGc-Ow-veN" customClass="CirclePresentedViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jp7-BK-pEg"/>
+                        <viewControllerLayoutGuide type="bottom" id="X2b-25-xvt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JRF-Gv-b13">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.09063113481" green="0.69327890869999997" blue="0.80273193119999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dyl-bv-fHD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1092" y="1735"/>
         </scene>
     </scenes>
     <resources>
