--- a/CustomNavigationTransition/Base.lproj/Main.storyboard
+++ b/CustomNavigationTransition/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -211,7 +212,18 @@
                     <view key="view" contentMode="scaleToFill" id="JRF-Gv-b13">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test" translatesAutoresizingMaskIntoConstraints="NO" id="yaS-mp-AMj">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="0.09063113481" green="0.69327890869999997" blue="0.80273193119999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="X2b-25-xvt" firstAttribute="top" secondItem="yaS-mp-AMj" secondAttribute="bottom" id="9mc-L4-18k"/>
+                            <constraint firstItem="yaS-mp-AMj" firstAttribute="leading" secondItem="JRF-Gv-b13" secondAttribute="leadingMargin" id="NnG-J3-PZp"/>
+                            <constraint firstItem="yaS-mp-AMj" firstAttribute="top" secondItem="jp7-BK-pEg" secondAttribute="bottom" id="QIN-a4-Jdf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yaS-mp-AMj" secondAttribute="trailing" id="Zc9-W1-N5C"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dyl-bv-fHD" userLabel="First Responder" sceneMemberID="firstResponder"/>
